--- a/http/public/index.html
+++ b/http/public/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <h1>My links - starting with NodeJS - by Izael silva</h1>
+    <h1>My URLs - Starting with NodeJS and protocol HTTP - by Izael silva</h1>
 
     <form action="/" class="container">
-        <input type="text" placeholder="Url Name, http://">
+        <input type="text" placeholder="url name - https://www.exemplo.com.br">
     </form>
 
     <ul class="container">
