--- a/http/public/index.html
+++ b/http/public/index.html
@@ -13,7 +13,7 @@
     <h1>My URLs - Starting with NodeJS and protocol HTTP - by Izael silva</h1>
 
     <form action="/" class="container">
-        <input type="text" placeholder="url name - https://www.exemplo.com.br">
+        <input type="text" placeholder="url name - https://exemplo.com.br">
     </form>
 
     <ul class="container">
